modified : ima ads container z-index fixed

--- a/upload/player/CB_video_js/css/videojs.ima.css
+++ b/upload/player/CB_video_js/css/videojs.ima.css
@@ -31,6 +31,7 @@
 	display: block;
 	width: 100%;
 	height: 100%;
+	z-index: 4 !important;
 }
 
 /* Move overlay if user fast-clicks play button. */
